--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
 
 }
 
+.wrapper {
+    display: flex;
+    margin: 0 auto;
+}
+
 .counter {
     border: 2px solid #006D80;
     width: 300px;
@@ -25,7 +30,7 @@
     background-color: #10bebe;
     font-family: Verdana, sans-serif;
     font-size: 14pt;
-    font-weight: bold;
+    font-weight: normal;
 }
 
 .buttons {
@@ -43,22 +48,16 @@
     cursor: pointer;
 }
 
-.error {
-    box-sizing: border-box;
-    width: 100%;
-    height: 70%;
-    border: 2px solid #006D80;
-    border-radius: 5px;
-    padding: 25px;
-    text-align: center;
-    margin-bottom: 10px;
-    background-color: #10bebe;
-    font-family: Verdana, sans-serif;
-    font-size: 14pt;
+.hotMessage {
+    font-size: 16pt;
     font-weight: bold;
     color: red;
 }
 
 .input {
     text-align: center;
+}
+
+.error {
+    background-color: palevioletred;
 }
